# collective.fieldedit

./: .travis.yml  CHANGES.rst  LICENSE.rst  README.rst  base.cfg  buildout.cfg  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
docs/: index.rst
src/collective/fieldedit/: __init__.py  configure.zcml  field_edit_form.pt  field_edit_form.py  field_edit_form_bs5.pt  interfaces.py  setuphandlers.py  testing.py
src/collective/fieldedit/profiles/default/: browserlayer.xml
src/collective/fieldedit/profiles/uninstall/: browserlayer.xml
src/collective/fieldedit/tests/: test_field_edit_form.py  test_robot.py  test_setup.py
src/collective/fieldedit/tests/robot/: test_example.robot
