[metadata]
long_description = file: README.rst, CHANGES.rst, LICENCE.rst

[check-manifest]
ignore =
    *.cfg
    .coveragerc
    .editorconfig
    .gitattributes
    bootstrap-buildout.py


[isort]
# black compatible Plone isort rules:
profile = black
force_alphabetical_sort = True
force_single_line = True
lines_after_imports = 2



[tool:bobtemplates.plone]
version = 5.0.8
